# Kimera-PGMO

./: README.md
kimera_pgmo/include/kimera_pgmo/: mesh_types.h
kimera_pgmo/src/utils/: common_functions.cpp
kimera_pgmo/test/: pgmo_fixtures.cpp  test_common_functions.cpp  test_deformation_graph.cpp  test_voxel_clearing_compression.cpp
kimera_pgmo_msgs/: CMakeLists.txt  package.xml
kimera_pgmo_msgs/msg/: KimeraPgmoMesh.msg
kimera_pgmo_msgs/srv/: RequestMeshFactors.srv
kimera_pgmo_ros/: CMakeLists.txt  package.xml
kimera_pgmo_ros/app/: kimera_pgmo_node.cpp  mesh_frontend_node.cpp  mesh_publisher_node.cpp  mesh_trajectory_deformer.cpp  voxblox_mesh_frontend_node.cpp
kimera_pgmo_ros/include/kimera_pgmo_ros/: kimera_pgmo.h  mesh_frontend.h  ros_log_sink.h  visualization_functions.h  voxblox_mesh_frontend.h  voxblox_msg_interface.h
kimera_pgmo_ros/include/kimera_pgmo_ros/conversion/: gtsam_conversions.h  mesh_conversion.h  mesh_delta_conversion.h  ros_conversion.h
kimera_pgmo_ros/src/: kimera_pgmo.cpp  mesh_frontend.cpp  visualization_functions.cpp  voxblox_mesh_frontend.cpp  voxblox_msg_interface.cpp
kimera_pgmo_ros/src/conversion/: gtsam_conversions.cpp  mesh_conversion.cpp  mesh_delta_conversion.cpp  voxblox_msg_conversion.cpp
kimera_pgmo_ros/test/: CMakeLists.txt  test_artifacts.h  test_kimera_pgmo.cpp  test_mesh_conversion.cpp
kimera_pgmo_rviz/: CMakeLists.txt  package.xml  plugins.xml
kimera_pgmo_rviz/include/kimera_pgmo_rviz/: mesh_display.h  mesh_visual.h  tf_event_buffer.h  visibility_field.h  visuals_map.h
kimera_pgmo_rviz/src/: mesh_display.cpp  mesh_visual.cpp  tf_event_buffer.cpp  visibility_field.cpp
